[tool.poetry]
name = "parser-notebooks"
version = "0.1.0"
description = ""
authors = ["David McClure <davidwilliammcclure@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.0.1"
jupyterlab = "^3.2.8"
boto3 = "^1.20.46"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
